# ArchitectureOfComputingSystems_HW5

./: CMakeLists.txt  main.cpp
tests/test1/: alphabet.txt  input.txt  output.txt
tests/test2/: alphabet.txt  input.txt  output.txt
tests/test3/: alphabet.txt  input.txt  output.txt
tests/test4/: alphabet.txt  input.txt  output.txt
tests/test5/: alphabet.txt  input.txt  output.txt
